# arhelk-core

./: .gitignore  .travis.yml  README.md  arhelk-core.cabal
src/Arhelk/Core/: Rule.hs
