name:                arhelk-core
version:             0.1.0.0
synopsis:            Core representation of languages in Arhelk system. All languages shares the design. 
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/arhelk-core
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha <ncrashed@gmail.com>, Oganyan Levon <lemarwin42@gmail.com>
maintainer:          ncrashed@gmail.com
copyright:           2015 © Teaspot Studio
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite arhelk-core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , arhelk-core
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Teaspot-Studio/arhelk-core.git